# hackathon2_all_phases

./: .gitignore  README.md  TEST_RESULTS.md
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  requirements.txt  start.bat
backend/src/: main.py
backend/src/api/: __init__.py  chat.py  health.py  mcp_tools.py  todos.py
backend/src/middleware/: auth.py  rate_limit.py
backend/src/services/: ai_agent_service.py  conversation_service.py  todo_service.py
backend/src/utils/: auth.py  decorators.py  errors.py
database/migrations/: 001_create_todos.py  002_create_conversations.py  003_create_messages.py  __init__.py
database/models/: base.py  conversation.py  message.py  todo.py  user.py
frontend/: .env.local.example  package-lock.json  package.json  start.bat  tailwind.config.js
phase-1-console/: CLAUDE.md  demo.py
phase-2-web/: .gitignore  API_DOCUMENTATION.md  CUsersLenovoDesktopbonsaitodo-appphase-2-webbackend.env  DEMO_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  debug_db.py  run_backend.py  test.db  test_auth_api.py  test_security.py  test_tasks.py
phase-3-chatbot/: .gitignore  CLAUDE.md  CUsersLenovoAppDataLocalTempopenapi.json  FIX_REPORT.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.txt  SETUP.md  SETUP_GUIDE.md  STATUS_REPORT.md  TESTING_GUIDE.md  TEST_AUTH.md  start_backend.bat  start_backend.sh  start_frontend.bat  test_backend.py  test_backend_api.py  test_chat_improved.py  test_chat_routing.py  test_complete_system.py  test_comprehensive.py  test_end_to_end.py  test_registration.py  verify_endpoints.py
(+219 files in other folders)
